--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "dependencies": {
     "@capacitor/android": "7.2.0",
     "@capacitor/app": "7.0.1",
+    "@capacitor/browser": "^7.0.1",
     "@capacitor/core": "7.2.0",
     "@capacitor/haptics": "7.0.1",
     "@capacitor/keyboard": "^7.0.1",
     "@capacitor/local-notifications": "^7.0.1",
     "@capacitor/push-notifications": "^7.0.1",
     "@capacitor/status-bar": "7.0.1",
-    "@ionic/vue": "^8.0.0",
+    "@ionic/vue": "^8.6.2",
     "@ionic/vue-router": "^8.0.0",
     "axios": "^1.9.0",
     "ionicons": "^7.0.0",
